Commit 05: Actualizando archivo .gitignore del Repositorio AprendiendoReactJS: agregando nueva regla para aplicacion /primera-app.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /.vscode
 /archivo-gitignore.txt
 
+/IntroduccionReactJS/primera-app/node_modules/
+
 /FreeCodeCampCurso/npm-debug.log*
 /FreeCodeCampCurso/yarn-debug.log*
 /FreeCodeCampCurso/yarn-error.log*
