Commit 17: AprendiendoReacJS - Actualizacion de archivo .gitignore: agregando excepcion para proyecto segunda-app.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 /IntroduccionReactJS/primera-app/node_modules/
 
+/IntroduccionReactJS/segunda-app/node_modules/
+
 /FreeCodeCampCurso/npm-debug.log*
 /FreeCodeCampCurso/yarn-debug.log*
 /FreeCodeCampCurso/yarn-error.log*
