Commit 41: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando regla de excepcion para /IntroduccionReactJS/react-with-jsx/recipe-app.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 /IntroduccionReactJS/nextjs/
 
+/IntroduccionReactJS/react-with-jsx/recipe-app/node_modules/
+
 /IntroduccionReactJS/primera-app/node_modules/
 
 /IntroduccionReactJS/segunda-app/node_modules/
