Commit 47: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando regla de excepcion para /IntroduccionReactJS/react-state/star-rating y /color-organizer.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 
 /IntroduccionReactJS/react-with-jsx/recipe-app/node_modules/
 
+/IntroduccionReactJS/react-state/star-rating/node_modules/
+/IntroduccionReactJS/react-state/color-organizer/node_modules/
+
+
 /IntroduccionReactJS/primera-app/node_modules/
 
 /IntroduccionReactJS/segunda-app/node_modules/
