--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /IntroduccionReactJS/react-hooks/use-effect-01/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-02/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-03/node_modules/
+/IntroduccionReactJS/react-hooks/use-effect-04/node_modules/
 
 
 /IntroduccionReactJS/primera-app/node_modules/
