Commit 91: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando regla de excepcion de carpeta (/node_modules) para /IntroduccionReactJS/react-hooks/use-effect-06.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /IntroduccionReactJS/react-hooks/use-effect-03/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-04/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-05/node_modules/
+/IntroduccionReactJS/react-hooks/use-effect-06/node_modules/
 
 
 /IntroduccionReactJS/primera-app/node_modules/
