--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,16 @@
 
 /IntroduccionReactJS/react-state/star-rating/node_modules/
 /IntroduccionReactJS/react-state/color-organizer/node_modules/
+
 /IntroduccionReactJS/react-hooks/use-effect-01/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-02/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-03/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-04/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-05/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-06/node_modules/
-
+/IntroduccionReactJS/react-hooks/use-effect-07/node_modules/
 
 /IntroduccionReactJS/primera-app/node_modules/
-
 /IntroduccionReactJS/segunda-app/node_modules/
 
 /FreeCodeCampCurso/npm-debug.log*
