--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /IntroduccionReactJS/react-hooks/use-effect-06/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-07/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-08/node_modules/
+/IntroduccionReactJS/react-hooks/use-layouteffect-01/node_modules/
 
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
