--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /IntroduccionReactJS/react-hooks/use-effect-07/node_modules/
 /IntroduccionReactJS/react-hooks/use-effect-08/node_modules/
 /IntroduccionReactJS/react-hooks/use-layouteffect-01/node_modules/
+/IntroduccionReactJS/react-hooks/use-layouteffect-02/node_modules/
 
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
