Commit 121: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando regla de excepcion de carpeta (/node_modules) para /IntroduccionReactJS/react-hooks/use-reducer-01.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /IntroduccionReactJS/react-hooks/use-effect-08/node_modules/
 /IntroduccionReactJS/react-hooks/use-layouteffect-01/node_modules/
 /IntroduccionReactJS/react-hooks/use-layouteffect-02/node_modules/
+/IntroduccionReactJS/react-hooks/use-reducer-01/node_modules/
 
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
