--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 /IntroduccionReactJS/react-hooks/use-layouteffect-02/node_modules/
 /IntroduccionReactJS/react-hooks/use-reducer-01/node_modules/
 /IntroduccionReactJS/react-hooks/use-reducer-02/node_modules/
+/IntroduccionReactJS/react-hooks/use-reducer-03/node_modules/
 
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
