--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /IntroduccionReactJS/react-hooks/use-reducer-01/node_modules/
 /IntroduccionReactJS/react-hooks/use-reducer-02/node_modules/
 /IntroduccionReactJS/react-hooks/use-reducer-03/node_modules/
+/IntroduccionReactJS/react-hooks/use-reducer-04/node_modules/
 
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
