Commit 152: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando regla de excepcion de carpeta (/node_modules) para /IntroduccionReactJS/react-data/**

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,17 @@
 /IntroduccionReactJS/react-hooks/use-reducer-04/node_modules/
 /IntroduccionReactJS/react-hooks/use-reducer-05/node_modules/
 
+/IntroduccionReactJS/react-data/react-request-data/autho-request-01/node_modules/
+/IntroduccionReactJS/react-data/react-request-data/autho-request-02/node_modules/
+/IntroduccionReactJS/react-data/react-request-data/displaying-data-list-01/node_modules/
+/IntroduccionReactJS/react-data/react-request-data/displaying-empty-list-01/node_modules/
+/IntroduccionReactJS/react-data/react-request-data/displaying-list-01/node_modules/
+/IntroduccionReactJS/react-data/react-request-data/handle-promise-01/node_modules/
+/IntroduccionReactJS/react-data/react-request-data/render-prop-func-01/node_modules/
+/IntroduccionReactJS/react-data/react-virtualized-list/manage-big-list/node_modules/
+/IntroduccionReactJS/react-data/react-virtualized-list/manage-big-list-02/node_modules/
+/IntroduccionReactJS/react-data/react-virtualized-list/using-fecth-comp/node_modules/
+
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
 
