--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 /IntroduccionReactJS/react-data/react-virtualized-list/manage-big-list-02/node_modules/
 /IntroduccionReactJS/react-data/react-virtualized-list/using-fetch-comp/node_modules/
 /IntroduccionReactJS/react-data/react-virtualized-list/customizing-loading/node_modules/
+/IntroduccionReactJS/react-data/react-virtualized-list/react-markdown-app/node_modules/
 
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
