Commit 226: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando regla de excepcion de carpeta (/node_modules) para proyecto react-graphql-app.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@
 /IntroduccionReactJS/react-data/react-virtualized-list/using-fetch-comp/node_modules/
 /IntroduccionReactJS/react-data/react-virtualized-list/customizing-loading/node_modules/
 /IntroduccionReactJS/react-data/react-virtualized-list/react-markdown-app/node_modules/
+/IntroduccionReactJS/react-data/react-intro-graphql/react-graphql-app/node_modules/
 
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
