--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,15 @@
 /IntroduccionReactJS/react-data/react-virtualized-list/react-markdown-app/node_modules/
 /IntroduccionReactJS/react-data/react-intro-graphql/react-graphql-app/node_modules/
 
+/IntroduccionReactJS/react-suspense/comp-render-susp-app/node_modules/
+/IntroduccionReactJS/react-suspense/susp-error-bound-app/node_modules/
+
+/IntroduccionReactJS/react-testing/proptypes-error-app/node_modules/
+/IntroduccionReactJS/react-testing/proptypes-reqvals-app/node_modules/
+/IntroduccionReactJS/react-testing/my-typescr-app/node_modules/
+/IntroduccionReactJS/react-testing/testing-demo-app/node_modules/
+/IntroduccionReactJS/react-testing/star-testing-app/node_modules/
+
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
 
