--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,10 @@
 /IntroduccionReactJS/react-testing/testing-demo-app/node_modules/
 /IntroduccionReactJS/react-testing/star-testing-app/node_modules/
 
+/IntroduccionReactJS/react-routing/company-web-app/node_modules/
+/IntroduccionReactJS/react-routing/company-web-app-02/node_modules/
+/IntroduccionReactJS/react-routing/color-organizer-app/node_modules/
+
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
 
