Commit 304: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando regla de excepcion de carpeta (/node_modules/) de la aplicacion freecodecamp-clone-clases.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@
 /FreeCodeCampCurso/yarn-error.log*
 
 /FreeCodeCampCurso/freecodecamp-clone/node_modules/
+/FreeCodeCampCurso/freecodecamp-clone-clases/node_modules/
