Commit 311: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando reglas de excepcion de carpeta (/node_modules/) de la aplicacion ClicksCounterClases

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@
 
 /FreeCodeCampCurso/freecodecamp-clone/node_modules/
 /FreeCodeCampCurso/freecodecamp-clone-clases/node_modules/
+/FreeCodeCampCurso/clicks-counter-clases/node_modules
