Commit 333: AprendiendoReactJS - Actualizacion de archivo .gitignore: agregando reglas de excepcion de carpeta (/node_modules/) de la aplicacion Calculadora.

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@
 /FreeCodeCampCurso/freecodecamp-clone-clases/node_modules/
 /FreeCodeCampCurso/clicks-counter-clases/node_modules/
 /FreeCodeCampCurso/clicks-counter/node_modules/
+/FreeCodeCampCurso/calculadora/node_modules/
