--- a/.gitignore
+++ b/.gitignore
@@ -54,12 +54,13 @@
 /IntroduccionReactJS/primera-app/node_modules/
 /IntroduccionReactJS/segunda-app/node_modules/
 
-/FreeCodeCampCurso/npm-debug.log*
-/FreeCodeCampCurso/yarn-debug.log*
-/FreeCodeCampCurso/yarn-error.log*
-
 /FreeCodeCampCurso/freecodecamp-clone/node_modules/
 /FreeCodeCampCurso/freecodecamp-clone-clases/node_modules/
 /FreeCodeCampCurso/clicks-counter-clases/node_modules/
 /FreeCodeCampCurso/clicks-counter/node_modules/
 /FreeCodeCampCurso/calculadora/node_modules/
+/FreeCodeCampCurso/reactjs-tasks-app/node_modules/
+
+/FreeCodeCampCurso/npm-debug.log*
+/FreeCodeCampCurso/yarn-debug.log*
+/FreeCodeCampCurso/yarn-error.log*
